bugfix for bg images on mobile

--- a/css/style2.css
+++ b/css/style2.css
@@ -162,11 +162,33 @@ ul, ol {
     background-attachment: fixed;
 }
 
-@media only screen and (max-width: 767px) {
-    .bg-img {
-        background-attachment: scroll;
-    }
+.home .bg-img {
+    position: fixed;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+    transform: translateZ(0);
+    will-change: transform;
 }
+
+.home .bg-img-wrapper {
+    clip: rect(0, auto, auto, 0);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+/*@media only screen and (max-width: 767px) {*/
+    /*.bg-img {*/
+        /*background-attachment: scroll;*/
+    /*}*/
+/*}*/
 
 .bg-img .overlay {
     position: absolute;
